@@ -464,6 +464,13 @@ startLaunch (const ::Deployment::Properties & configProperty,
           if (this->artifact_map_.find (this->node_manager_names_[i],
                                         entry) != 0)
             {
+              ACE_ERROR ((LM_ERROR,
+                          "DAnCE (%P|%t) DomainApplicationManager_Impl.cpp -"
+                          "CIAO::DomainApplicationManager_Impl::startLaunch -"
+                          "ERROR while finding the node specific plan "
+                          "for the node [%s] \n",
+                          this->node_manager_names_[i].c_str ()));
+
               ACE_CString error 
                  ("Unable to resolve a reference to node manager: ");
               error += this->node_manager_names_[i];
@@ -479,12 +486,22 @@ startLaunch (const ::Deployment::Properties & configProperty,
           
           if (CORBA::is_nil (my_nam))
             {
-              ACE_CString error ("While starting launch, the DomainApplicationManager\
-                                 has a nil reference for NodeApplicationManager\n");
+              ACE_ERROR ((LM_ERROR,
+                          "DAnCE (%P|%t) DomainApplicationManager_Impl.cpp -"
+                          "CIAO::DomainApplicationManager_Impl::startLaunch -"
+                          "ERROR while narrowing the NAM "
+                          "for the node [%s] \n",
+                          this->node_manager_names_[i].c_str ()));
+
+              ACE_CString error 
+                 ("While starting launch, the DomainApplicationManager\
+                  has a nil reference for NodeApplicationManager\n");
               ACE_DEBUG ((LM_DEBUG, error.c_str ()));
                                      
-              ACE_TRY_THROW (Deployment::StartError ("DomainApplicationManager_Impl::startLaunch",
-                                                     error.c_str ()));
+              ACE_TRY_THROW 
+                (Deployment::StartError 
+                   ("DomainApplicationManager_Impl::startLaunch",
+                     error.c_str ()));
             }
 
           ACE_TRY_CHECK;
@@ -496,7 +513,7 @@ startLaunch (const ::Deployment::Properties & configProperty,
           ::Deployment::Application_var temp_application =
             my_nam->startLaunch (configProperty,
                                  retn_connections.out (),
-                                 0);  // This is a mistake. This should never be here.
+                                 0);
 
           // Narrow down to NodeApplication object reference
           ::Deployment::NodeApplication_var my_na =
@@ -506,13 +523,23 @@ startLaunch (const ::Deployment::Properties & configProperty,
 
           if (CORBA::is_nil (my_na.in ()))
             {
-              ACE_CString error ( "The DomainApplicationManager receives a nil\
-                                     reference of NodeApplication after calling\
-                                     startLaunch on NodeApplicationManager.\n");
+              ACE_ERROR ((LM_ERROR,
+                          "DAnCE (%P|%t) DomainApplicationManager_Impl.cpp -"
+                          "CIAO::DomainApplicationManager_Impl::startLaunch -"
+                          "ERROR while narrowing the NAM "
+                          "for the node [%s] \n",
+                          this->node_manager_names_[i].c_str ()));
+
+              ACE_CString error 
+                ("The DomainApplicationManager receives a nil\
+                 reference of NodeApplication after calling\
+                 startLaunch on NodeApplicationManager.\n");
               ACE_ERROR ((LM_ERROR, error.c_str ()));
               
-              ACE_TRY_THROW (Deployment::StartError ("DomainApplicationManager_Impl::startLaunch",
-                                                     error.c_str ()));
+              ACE_TRY_THROW 
+                (Deployment::StartError 
+                   ("DomainApplicationManager_Impl::startLaunch",
+                     error.c_str ()));
             }
           ACE_TRY_CHECK;
 
@@ -543,7 +570,6 @@ finishLaunch (::CORBA::Boolean start
                    Deployment::StartError))
 {
   CIAO_TRACE("CIAO::DomainApplicationManager_Impl::finishLaunch");
-  ACE_DEBUG ((LM_DEBUG, "CIAO::DomainApplicationManager_Impl::finishLaunch.\n"));
   ACE_TRY
     {
       // Invoke finishLaunch() operation on each cached NodeApplication object.
@@ -555,23 +581,35 @@ finishLaunch (::CORBA::Boolean start
           if (this->artifact_map_.find (this->node_manager_names_[i],
                                         entry) != 0)
             {
+              ACE_ERROR ((LM_ERROR,
+                          "DAnCE (%P|%t) DomainApplicationManager_Impl.cpp -"
+                          "CIAO::DomainApplicationManager_Impl::finishLaunch -"
+                          "ERROR while finding the node specific plan "
+                          "for the node [%s] \n",
+                          this->node_manager_names_[i].c_str ()));
 
-              ACE_CString error ("Unable to resolve a reference to NodeManager: ");
+              ACE_CString error 
+                 ("Unable to resolve a reference to NodeManager: ");
               error += this->node_manager_names_[i];
               
-              ACE_TRY_THROW (Deployment::StartError ("DomainApplicationManager_Impl::finishLaunch",
-                                                 error.c_str ())); // Should never happen!
+              ACE_TRY_THROW 
+                (Deployment::StartError 
+                   ("DomainApplicationManager_Impl::finishLaunch",
+                     error.c_str ()));
             }
           
 
           //@@ Note: Don't delete the below debugging helpers.
           // Dump the connections for debug purpose.
-          if (CIAO::debug_level () > 1)
+          if (CIAO::debug_level () > 9)
             {
-              ACE_DEBUG ((LM_DEBUG, "==============================================\n"));
-              ACE_DEBUG ((LM_DEBUG, "dump incomming connection for child plan:%d\n", i));
+              ACE_DEBUG ((LM_DEBUG, 
+                 "==============================================\n"));
+              ACE_DEBUG ((LM_DEBUG, 
+                 "dump incoming connections for child plan:%d\n", i));
               dump_connections (this->all_connections_.in ());
-              ACE_DEBUG ((LM_DEBUG, "==============================================\n"));
+              ACE_DEBUG ((LM_DEBUG, 
+                  "==============================================\n"));
             }
 
           // Get the Connections variable.
@@ -581,31 +619,48 @@ finishLaunch (::CORBA::Boolean start
           ACE_TRY_CHECK;
 
           if (my_connections == 0)
-            ACE_TRY_THROW (Deployment::StartError ("DomainApplicationManager_Impl::finish_launch",
-                                                   "There was some error establishing connections."));
+            {
+              ACE_ERROR ((LM_ERROR,
+                          "DAnCE (%P|%t) DomainApplicationManager_Impl.cpp -"
+                          "CIAO::DomainApplicationManager_Impl::finishLaunch -"
+                          "ERROR while getting the outgoing connections "
+                          "for the node [%s] \n",
+                          this->node_manager_names_[i].c_str ()));
+
+              ACE_TRY_THROW 
+                (Deployment::StartError 
+                   ("DomainApplicationManager_Impl::finish_launch",
+                    "There was some error establishing connections."));
+            }
 
           Deployment::Connections_var safe (my_connections);
 
           // Dump the connections for debug purpose.
           if (CIAO::debug_level () > 1)
             {
-              ACE_DEBUG ((LM_DEBUG, "==============================================\n"));
-              ACE_DEBUG ((LM_DEBUG, "dump outgoingcomming connection for child plan:%d\n", i));
+              ACE_DEBUG ((LM_DEBUG, 
+                  "==============================================\n"));
+              ACE_DEBUG ((LM_DEBUG, 
+                  "dump outgoing connections for child plan:%d\n", i));
               dump_connections (safe.in ());
-              ACE_DEBUG ((LM_DEBUG, "==============================================\n"));
+              ACE_DEBUG ((LM_DEBUG, 
+                  "==============================================\n"));
             }
 
           // Invoke finishLaunch() operation on NodeApplication.
-          entry->int_id_.node_application_->finishLaunch (safe.in (),
-                                                          start
-                                                          ACE_ENV_ARG_PARAMETER);
+          entry->int_id_.node_application_->finishLaunch 
+             (safe.in (),
+              start
+              ACE_ENV_ARG_PARAMETER);
           ACE_TRY_CHECK;
         }
     }
   ACE_CATCHANY
     {
-      ACE_PRINT_EXCEPTION (ACE_ANY_EXCEPTION,
-                           "DomainApplicationManager_Impl::finishLaunch: Killing NodeApplications.\n");
+      ACE_PRINT_EXCEPTION  (ACE_ANY_EXCEPTION,
+                            "DomainApplicationManager_Impl::finishLaunch: "
+                            "Killing NodeApplications.\n");
+
       // Invoke destroyManager() operation on each cached
       // NodeManager object.
       for (CORBA::ULong i = 0; i < this->num_child_plans_; ++i)
@@ -614,13 +669,15 @@ finishLaunch (::CORBA::Boolean start
           ACE_Hash_Map_Entry <ACE_CString, Chained_Artifacts> * entry;
           this->artifact_map_.find (this->node_manager_names_[i],entry);
 
-          ::Deployment::NodeApplicationManager_ptr my_node_application_manager =
+          ::Deployment::NodeApplicationManager_ptr 
+              my_node_application_manager =
                   (entry->int_id_).node_application_manager_.in ();
 
           // Invoke destoryApplication() operation on the NodeApplicationManger.
           // Since we have the first arg is not used by NAM anyway.
-          my_node_application_manager->destroyApplication (0
-                                                           ACE_ENV_ARG_PARAMETER);
+          my_node_application_manager->destroyApplication 
+             (0
+              ACE_ENV_ARG_PARAMETER);
           ACE_CHECK;
         }
       ACE_RE_THROW;
@@ -637,30 +694,33 @@ start (ACE_ENV_SINGLE_ARG_DECL)
                    ::Deployment::StartError))
 {
   CIAO_TRACE("CIAO::DomainApplicationManager_Impl::start");
-  ACE_DEBUG ((LM_DEBUG, "CIAO::DomainApplicationManager_Impl::start.\n"));
+
   ACE_TRY
     {
       CORBA::ULong i;
 
-      // @TODO: Below code has too much duplication, I will come back to
-      // reorganize it later. 
-
-      // Invoke ciao_preactivate () operation on each cached NodeApplication object.
       for (i = 0; i < this->num_child_plans_; ++i)
         {
           // Get the NodeApplication object reference.
-          ACE_Hash_Map_Entry
-            <ACE_CString,
-            Chained_Artifacts> *entry;
+          ACE_Hash_Map_Entry <ACE_CString, Chained_Artifacts> *entry;
 
           if (this->artifact_map_.find (this->node_manager_names_[i],
                                         entry) != 0)
             {
-              ACE_CString error ("Unable to resolve a reference to node manager: ");
+              ACE_ERROR ((LM_ERROR,
+                          "DAnCE (%P|%t) DomainApplicationManager_Impl.cpp -"
+                          "CIAO::DomainApplicationManager_Impl::start -"
+                          "ERROR while finding the node specific plan "
+                          "for the node [%s] \n",
+                          this->node_manager_names_[i].c_str ()));
+
+              ACE_CString error 
+                ("Unable to resolve a reference to node manager: ");
               error += this->node_manager_names_[i];
               
-              ACE_TRY_THROW (Deployment::StartError ("DomainApplicationManager_Impl:startLaunch",
-                                                     error.c_str ())); // Should never happen!
+              ACE_TRY_THROW (Deployment::StartError 
+                ("DomainApplicationManager_Impl:startLaunch",
+                  error.c_str ()));
             }
 
           ::Deployment::NodeApplication_ptr my_na =
@@ -669,21 +729,25 @@ start (ACE_ENV_SINGLE_ARG_DECL)
           my_na->ciao_preactivate (ACE_ENV_SINGLE_ARG_PARAMETER);
           ACE_TRY_CHECK;
         }
-      if (CIAO::debug_level () > 1)
-        ACE_DEBUG ((LM_DEBUG,
-                    "CIAO_DomainApplicationManager: ciao_preactivation finished.\n"));
 
       // Invoke start () operation on each cached NodeApplication object.
       for (i = 0; i < this->num_child_plans_; ++i)
         {
           // Get the NodeApplication object reference.
-          ACE_Hash_Map_Entry
-            <ACE_CString,
-            Chained_Artifacts> *entry;
+          ACE_Hash_Map_Entry <ACE_CString, Chained_Artifacts> *entry;
 
           if (this->artifact_map_.find (this->node_manager_names_[i],
                                         entry) != 0)
-            ACE_TRY_THROW (Deployment::StartError ()); // Should never happen!
+            {
+              ACE_ERROR ((LM_ERROR,
+                          "DAnCE (%P|%t) DomainApplicationManager_Impl.cpp -"
+                          "CIAO::DomainApplicationManager_Impl::start -"
+                          "ERROR while finding the node specific plan "
+                          "for the node [%s] \n",
+                          this->node_manager_names_[i].c_str ()));
+
+              ACE_TRY_THROW (Deployment::StartError ());
+            }
 
           ::Deployment::NodeApplication_ptr my_na =
            (entry->int_id_).node_application_.in ();
@@ -691,26 +755,32 @@ start (ACE_ENV_SINGLE_ARG_DECL)
           my_na->start (ACE_ENV_SINGLE_ARG_PARAMETER);
           ACE_TRY_CHECK;
         }
-      if (CIAO::debug_level () > 1)
-        ACE_DEBUG ((LM_DEBUG,
-                    "CIAO_DomainApplicationManager: ccm_activate finished.\n"));
+      
+     // Invoke ciao_postctivate () operation on each 
+     // cached NodeApplication object.
 
-      // Invoke ciao_postctivate () operation on each cached NodeApplication object.
       for (i = 0; i < this->num_child_plans_; ++i)
         {
           // Get the NodeApplication object reference.
-          ACE_Hash_Map_Entry
-            <ACE_CString,
-            Chained_Artifacts> *entry;
+          ACE_Hash_Map_Entry <ACE_CString, Chained_Artifacts> *entry;
 
           if (this->artifact_map_.find (this->node_manager_names_[i],
                                         entry) != 0)
             {
-              ACE_CString error ("Unable to resolve a reference to node manager: ");
+              ACE_ERROR ((LM_ERROR,
+                          "DAnCE (%P|%t) DomainApplicationManager_Impl.cpp -"
+                          "CIAO::DomainApplicationManager_Impl::start -"
+                          "ERROR while finding the node specific plan "
+                          "for the node [%s] \n",
+                          this->node_manager_names_[i].c_str ()));
+
+              ACE_CString error 
+                ("Unable to resolve a reference to node manager: ");
               error += this->node_manager_names_[i];
               
-              ACE_TRY_THROW (Deployment::StartError ("DomainApplicationManager_Impl:startLaunch",
-                                                 error.c_str ())); // Should never happen!
+              ACE_TRY_THROW (Deployment::StartError 
+                  ("DomainApplicationManager_Impl:startLaunch",
+                    error.c_str ()));
             }
 
           ::Deployment::NodeApplication_ptr my_na =
@@ -719,9 +789,6 @@ start (ACE_ENV_SINGLE_ARG_DECL)
           my_na->ciao_postactivate (ACE_ENV_SINGLE_ARG_PARAMETER);
           ACE_TRY_CHECK;
         }
-      if (CIAO::debug_level () > 1)
-        ACE_DEBUG ((LM_DEBUG,
-                    "CIAO_DomainApplicationManager: ciao_postactivation finished.\n"));
     }
   ACE_CATCHANY
     {
@@ -741,7 +808,6 @@ destroyApplication (ACE_ENV_SINGLE_ARG_DECL)
                    ::Deployment::StopError))
 {
   CIAO_TRACE("CIAO::DomainApplicationManager_Impl::destroyApplication");
-  ACE_DEBUG ((LM_DEBUG, "CIAO::DomainApplicationManager_Impl::destroyApplication.\n"));
   ACE_TRY
     {
       CORBA::ULong i;
@@ -750,13 +816,20 @@ destroyApplication (ACE_ENV_SINGLE_ARG_DECL)
       for (i = 0; i < this->num_child_plans_; ++i)
         {
           // Get the NodeApplication object references.
-          ACE_Hash_Map_Entry
-            <ACE_CString,
-            Chained_Artifacts> *entry;
+          ACE_Hash_Map_Entry <ACE_CString, Chained_Artifacts> *entry;
 
           if (this->artifact_map_.find (this->node_manager_names_[i],
                                         entry) != 0)
-            ACE_TRY_THROW (Deployment::StopError ()); // Should never happen!
+            {
+              ACE_ERROR ((LM_ERROR,
+                          "DAnCE (%P|%t) DomainApplicationManager_Impl.cpp -"
+                    "CIAO::DomainApplicationManager_Impl::destroyApplication -"
+                          "ERROR while finding the node specific plan "
+                          "for the node [%s] \n",
+                          this->node_manager_names_[i].c_str ()));
+
+              ACE_TRY_THROW (Deployment::StopError ());
+            }
           
           ::Deployment::NodeApplication_ptr my_na =
               (entry->int_id_).node_application_.in ();
@@ -770,21 +843,30 @@ destroyApplication (ACE_ENV_SINGLE_ARG_DECL)
       for (i = 0; i < this->num_child_plans_; ++i)
         {
           // Get the NodeManager and NodeApplicationManager object references.
-          ACE_Hash_Map_Entry
-            <ACE_CString,
-            Chained_Artifacts> *entry;
+          ACE_Hash_Map_Entry <ACE_CString, Chained_Artifacts> *entry;
 
           if (this->artifact_map_.find (this->node_manager_names_[i],
                                         entry) != 0)
-            ACE_TRY_THROW (Deployment::StopError ()); // Should never happen!
+            {
+              ACE_ERROR ((LM_ERROR,
+                          "DAnCE (%P|%t) DomainApplicationManager_Impl.cpp -"
+                    "CIAO::DomainApplicationManager_Impl::destroyApplication -"
+                          "ERROR while finding the node specific plan "
+                          "for the node [%s] \n",
+                          this->node_manager_names_[i].c_str ()));
 
-          ::Deployment::NodeApplicationManager_ptr my_node_application_manager =
+              ACE_TRY_THROW (Deployment::StopError ());
+            }
+
+          ::Deployment::NodeApplicationManager_ptr 
+              my_node_application_manager =
                   (entry->int_id_).node_application_manager_.in ();
 
           // Invoke destoryApplication() operation on the NodeApplicationManger.
           // Since we have the first arg is not used by NAM anyway.
-          my_node_application_manager->destroyApplication (0
-                                                           ACE_ENV_ARG_PARAMETER);
+          my_node_application_manager->destroyApplication 
+              (0
+               ACE_ENV_ARG_PARAMETER);
           ACE_TRY_CHECK;
         }
     }
@@ -889,6 +971,7 @@ get_outgoing_connections_i (const char * instname,
   ACE_THROW_SPEC ((Deployment::StartError))
 {
   CIAO_TRACE("CIAO::DomainApplicationManager_Impl::get_outoing_connections_i");
+
   // Search in all the connections in the plan.
   for (CORBA::ULong i = 0; i < this->plan_.connection.length(); ++i)
   {
@@ -911,7 +994,7 @@ get_outgoing_connections_i (const char * instname,
       // If the component name matches the name of one of the
       // endpoints in the connection.
       if (ACE_OS::strcmp (this->plan_.instance[endpoint.instanceRef].name.in (),
-                                            instname) == 0 )
+                          instname) == 0 )
       {
         //Look at the port kind to make sure it's what we are interested in.
         if (endpoint.kind != Deployment::Facet &&
@@ -922,9 +1005,12 @@ get_outgoing_connections_i (const char * instname,
 
             //Cache the name of the other component for later usage (search).
             ACE_CString name =
-              this->plan_.instance[curr_conn.internalEndpoint[index].instanceRef].name.in ();
+              this->plan_.instance[curr_conn.internalEndpoint[index].
+                 instanceRef].name.in ();
 
-            //Cache the name of the port from the other component for searching later.
+            // Cache the name of the port from the 
+            // other component for searching later.
+
             ACE_CString port_name =
               curr_conn.internalEndpoint[index].portName.in ();
             
@@ -934,17 +1020,19 @@ get_outgoing_connections_i (const char * instname,
             
             bool found = false;
 
-            // Now we have to search in the received connections to get the objRef.
+            // Now we have to search in the received 
+            // connections to get the objRef.
+
             const CORBA::ULong all_conn_len = this->all_connections_->length ();
             for (CORBA::ULong conn_index = 0;
                 conn_index < all_conn_len;
                 ++conn_index)
               {
-                //ACE_DEBUG ((LM_DEBUG, "step4\n"));
+                const Deployment::Connection curr_rev_conn = 
+                    this->all_connections_[conn_index];
 
-                const Deployment::Connection curr_rev_conn = this->all_connections_[conn_index];
-
-                // We need to look at the instance name and the port name to confirm.
+                // We need to look at the instance name and the 
+                // port name to confirm.
                 if (ACE_OS::strcmp (curr_rev_conn.instanceName.in (),
                                     name.c_str ()) == 0 &&
                     ACE_OS::strcmp (curr_rev_conn.portName.in (),
@@ -956,32 +1044,34 @@ get_outgoing_connections_i (const char * instname,
                     retv[len].instanceName = instname;
                     retv[len].portName = endpoint.portName.in ();
                     retv[len].kind = endpoint.kind;
-                    retv[len].endpoint = CORBA::Object::_duplicate(curr_rev_conn.endpoint.in ());
+                    retv[len].endpoint = 
+                       CORBA::Object::_duplicate(curr_rev_conn.endpoint.in ());
                     ++len;
                     found = true;
-                    break;            // Since we know there is only 2 endpoints in a connection.
-                                      // so we dont have to worry about multiplex Receptacle etc.
+                    break;
                   }
               }
 
-              // We didnt find the counter part connection even we are sure there must be 1.
+              // We didnt find the counter part connection even 
+              // we are sure there must be 1.
+
               if (!found) 
                 {
                   ACE_CString error ("Creating connections for ");
                   error += instname;
                   error += ": unable to find object reference for connection ";
                   error += curr_conn.name.in ();
-                  ACE_THROW_RETURN (Deployment::StartError ("DomainApplicationManager_Impl::create_connections_i",
-							    error.c_str ()),
-				          false);
+                  ACE_THROW_RETURN (Deployment::StartError 
+                    ("DomainApplicationManager_Impl::create_connections_i",
+		      error.c_str ()),
+		      false);
                 }
                   
-              break; // We know we have found the connection so even we are still on
-                     // internalpoint 0 we can skip internalpoint 1.
+              break;
           }
       }
-    }  /* close for loop on internal endpoints */
-  }  /* close for loop on all connections in the plan */
+    }
+  }
   return 1;
 }
 
